--- a/EntityFrameworkIntegrationEventLog/EntityFrameworkIntegrationEventLog/EntityFrameworkIntegrationEventLog.csproj
+++ b/EntityFrameworkIntegrationEventLog/EntityFrameworkIntegrationEventLog/EntityFrameworkIntegrationEventLog.csproj
@@ -5,9 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LilaSoft.Patterns.EventBus.EventBus" Version="1.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.2" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
 </Project>
