--- a/EntityFrameworkIntegrationEventLog/EntityFrameworkIntegrationEventLog/EntityFrameworkIntegrationEventLog.csproj
+++ b/EntityFrameworkIntegrationEventLog/EntityFrameworkIntegrationEventLog/EntityFrameworkIntegrationEventLog.csproj
@@ -8,6 +8,7 @@
     <Description>Le projet LilaSoft.Patterns.EventBus.EntityFrameworkIntegrationEventLog est un fork du projet du repository eShopContainers afin de faciliter mes futurs développements. Comme tous mes forks issus de ce projet, ils sont issus à changement suivant l'évolution de mes besoins.</Description>
     <RepositoryType>Github</RepositoryType>
     <PackageProjectUrl>https://github.com/Beowulf59000/LilaSoft.Patterns.EventBus.EntityFrameworkIntegrationEventLog</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/Beowulf59000/LilaSoft.Patterns.EventBus.EntityFrameworkIntegrationEventLog/blob/master/LICENSE.md</PackageLicenseUrl>
   </PropertyGroup>
 
   <ItemGroup>
